=========
Changelog
=========

Here you can find the recent changes to tmuxp

- :release:`1.3.3 <2017-10-07>`
- :support:`- backported` Update libtmux to 0.7.5 for tmux 2.6 hotfix

- :release:`1.3.2 <2017-08-20>`
- :bug:`184` - update libtmux to fix environmental variables in the
  session scope
- :support:`- backported` Update libtmux to 0.7.4
- :support:`- backported` Updates to pytest and pytest-rerunfailures

- :release:`1.3.1 <2017-05-29>`
- :bug:`252 backported` Fix bug where loading a session with a name matching a subset
  of current session causes undesired behavior.
- :support:`- backported` Update libtmux to 0.7.3
- :support:`- backported` Switch theme to alagitpull (alabaster subtheme)
- :support:`- backported` Remove unneeded doc dependency packages

- :release:`1.3.0 <2017-04-27>`
- :feature:`239` Improve support for formatted options when freezing and
  using configs with them.
- :feature:`236` Support for symlinked directories, thanks @rafi.
- :feature:`235` Support for ``options_after``, for setting options like
  ``synchronize-panes``. Thanks @sebastianst.
- :support:`248` Drop python 2.6 support
- :support:`248` Upgrade libtmux to 0.7.1
- :support:`-` Upgrade colorama from 0.3.7 to 0.3.9

- :release:`1.2.8 <2017-04-02>`
- :support:`229 backported` More helpful error message on systems missing
  tmux.
- :support:`- backported` Update libtmux from 0.6.4 to 0.6.5.

- :release:`1.2.7 <2017-03-25>`
- :support:`- backported` Support for OpenBSD.

- :release:`1.2.6 <2017-02-24>`
- :support:`218 backported` Fix pane ordering by running ``select-layout`` before
  splits.

- :release:`1.2.5 <2017-02-08>`
- :feature:`207 backported` add custom tmuxp config directory via
  ``TMUXP_CONFIGDIR`` variable.
- :support:`199 backported` support for running tmuxp on tmux ``master``.
- :support:`- backported` update libtmux from 0.6.2 to 0.6.3.

- :release:`1.2.4 <2017-01-13>`
- :bug:`198 backported` bump click from 6.6 to 6.7