@@ -137,7 +137,7 @@ Project details
 ---------------
 
 ==============  ==========================================================
-tmux support    1.8, 1.9a, 2.0, 2.1, 2.2, 2.3, 2.4
+tmux support    1.8, 1.9a, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6
 python support  2.7, >= 3.3, pypy, pypy3
 config support  yaml, json, python dict
 Source          https://github.com/tony/tmuxp
