@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: tmuxp
-Version: 1.3.3
+Version: 1.3.4
 Summary: tmux session manager
 Home-page: http://github.com/tony/tmuxp/
 Author: Tony Narlock
@@ -147,7 +147,7 @@ Description: tmuxp, tmux session manager. built on `libtmux`_.
         ---------------
         
         ==============  ==========================================================
-        tmux support    1.8, 1.9a, 2.0, 2.1, 2.2, 2.3, 2.4
+        tmux support    1.8, 1.9a, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6
         python support  2.7, >= 3.3, pypy, pypy3
         config support  yaml, json, python dict
         Source          https://github.com/tony/tmuxp
